fix in transition small

--- a/src/Components/Xs/xs.css
+++ b/src/Components/Xs/xs.css
@@ -70,6 +70,12 @@
   display: flex;
   
 }
+.img-box-small {
+    grid-column: 1/4;
+    display: flex;
+    margin-top: 24px;
+  }
+
 .sub-xs{
 color: #fff;
 margin: 0;
@@ -87,14 +93,27 @@ align-items: center;
 justify-content: center;
 margin-right: 8px;
 }
-img {
+.single-box-small{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    }
+.single-box-small img{
+    width: 100%;
+    height: 100%;
+}
+.single-box img {
   width: 100%;
   height: 100%;
   -webkit-transition: width 1s, height 1s;
   transition: width 1s, height 1s;
   
 }
-img:hover{
+.single-box img:hover{
     width: 300px;
     height: 300px;
 }
